Fix expiry date validation

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 PlainVersion/node_modules
 MDCVersion/node_modules
+MDCVersion/assets/bundle.js
+MDCVersion/assets/style-bundle.css
+MDCVersion/assets/bundle.js
